syntax = "proto3";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;
option java_outer_classname = "Test";
message HelloWorld {
  string strHello=1;
  int32 age=2;
  float weight=3;
  float size=4;

}
message HelloResponse {
  string response = 1;
}

service TestHelloWorldService {
  rpc testHelloWorld( HelloWorld) returns ( HelloResponse);
}
